delete end point created
