# src/controllers/userController.ts
@@ -1,4 +1,4 @@
-import { Request, Response } from 'express';
+import { NextFunction, Request, Response } from 'express';
 import { UserService } from '../services/userService';
 import { controller} from 'inversify-express-utils';
 import { handleUserResponse } from '../responseHandlers/UserResponseHandler';
@@ -17,7 +17,7 @@ export class UserController {
   }
 
 
-  async createUser(req: Request, res: Response): Promise<void> {
+  async createUser(req: Request, res: Response, next: NextFunction): Promise<void> {
     
     const { firstName, lastName, email, phone, password } = req.body;
     const hashedPassword = await bcrypt.hash(password, 10);
@@ -35,12 +35,11 @@ export class UserController {
       const createdUser = await this.userService.createUser(userData);
       res.status(201).json({ message: 'User created successfully', result: handleUserResponse(createdUser) });
     } catch (error) {
-      console.error(error);
-      res.status(500).json({ message: 'Internal server error' });
+        next(error);
     }
   }
 
-  async updateUser(req: Request, res: Response): Promise<void> {
+  async updateUser(req: Request, res: Response, next: NextFunction): Promise<void> {
     const userId = parseInt(req.params.id); // Extract user ID from request params
     const { firstName, lastName, email, phone, password } = req.body;
     const hashedPassword = await bcrypt.hash(password, 10);
@@ -62,12 +61,24 @@ export class UserController {
       }
       res.status(200).json({ message: 'User updated successfully', result: handleUserResponse(updatedUser) });
     } catch (error) {
-      res.status(500).json({ message: 'User not found' });
+        next(error);
     }
   }
 
-  async getUserById(req: Request, res: Response): Promise<void> {
-    const userId = parseInt(req.params.id, 10); 
+  async deleteUser(req: Request, res: Response, next: NextFunction): Promise<void> {
+    const userId = parseInt(req.params.id);
+    try {
+
+      await this.userService.deleteUser(userId);     
+      res.status(200).json({ message: 'User Deleted Successfully'});
+      
+    } catch (error) {
+        next(error);
+    }
+  }
+
+  async getUserById(req: Request, res: Response, next: NextFunction): Promise<void> {
+    const userId = parseInt(req.params.id); 
     try {
       const user = await this.userService.getUserById(userId);
       if (user) {
@@ -76,21 +87,20 @@ export class UserController {
         res.status(404).json({ message: 'User not found' });
       }
     } catch (error) {
-      res.status(500).json({ message: 'Internal server error' });
+        next(error);
     }
   }
 
-  async getUsers(req: Request, res: Response): Promise<void> {
+  async getUsers(req: Request, res: Response, next: NextFunction): Promise<void> {
     try {
-      const users = await this.userService.getAllUsers();
-      console.log(users)
+      const users = await this.userService.getAllUsers();      
       if (users) {
         res.status(200).json({ result: handleUserResponse(users) });
       } else {
         res.status(404).json({ message: 'No users available' });
       }
     } catch (error) {
-      res.status(500).json({ message: 'from Internal server error' });
+        next(error);
     }
   }
   
